DONE customer flows. Rent a bike. Add money to wallet. Report a bike

--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -348,7 +348,11 @@
                           <h5 class="modal-title">Report A Problem!</h5>
                       </div>
                       <div class="modal-body">                            
-                          <p>Would you like to report a problem with this bike? </p>
+                          <p><b id="bike-report-text">Would you like to report a problem with this bike?</b></p>
+                          <div class="form-group">
+                            <label for="report-problem">What's the problem?</label>
+                            <textarea class="form-control" id="report-problem" rows="3"></textarea>
+                          </div>
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-primary btn-block"       
