--- a/bikeshare/templates/bikeshareapp/operator_page.html
+++ b/bikeshare/templates/bikeshareapp/operator_page.html
@@ -19,6 +19,8 @@
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
+    <script src="{% static "javascript/routes.js" %}"></script>
+
     <script
       src="{% static "javascript/jquery-3.5.1.min.js"%}"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -54,18 +56,16 @@
     />-->
 
     <script>
-      let directionsDisplay;
-      let directionsService;
       let map;
       let imgs = "{% static "img/" %}"
       let markersList = []
       let markerBallonList = []
       let markerBikeList = []
       let markerBikeListMoving = []
+      let markerBikeListMovingNames = []
+      let moveInterval;
       let markerCluster;
       function initMap() {
-        directionsDisplay = new google.maps.DirectionsRenderer({ draggable: true });
-        directionsService = new google.maps.DirectionsService();
           map = new google.maps.Map(document.getElementById("map"), {
               center: { lat: 55.860789, lng: -4.250311 },
               zoom: 12,
@@ -570,58 +570,11 @@
         }
       }
 
-      // http://jsfiddle.net/mxauvtbr/2/
-      function calcRoute() {
-          var request = {
-              origin: "Patrick's St, Cork, Ireland",//$("#routeFrom").val(),
-              destination: "The Square, Blarney, Cork, Ireland",//$("#routeTo").val(),
-              travelMode: "DRIVING"
-          };
-          directionsService.route(request, function(response, status) {
-              if (status == google.maps.DirectionsStatus.OK) {
-                  directionsDisplay.setDirections(response);
-                  //document.getElementById('Gresponse').innerHTML = JSON.stringify(response);
-                  createPolyline(response);
-              }
-          });
-      };
-
-      function createPolyline(directionResult) {
-        line = new google.maps.Polyline({
-            path: directionResult.routes[0].overview_path,
-            strokeColor: '#FF0000',
-            strokeOpacity: 0.5,
-            strokeWeight: 4,
-            icons: [{
-                icon: {
-                  path: google.maps.SymbolPath.CIRCLE,
-                  scale: 8,
-                  strokeColor: '#393'
-                },
-                offset: '100%'
-              }]
-        });
-        line.setMap(map);
-        animate();
-      };
-
-      function animate() {
-          var count = 0;
-          window.setInterval(function() {
-            count = (count + 1) % 200;
-
-            var icons = line.get('icons');
-            icons[0].offset = (count / 2) + '%';
-            line.set('icons', icons);
-        }, 20);
-      };
-
       function GetTrack(){
           var html="Current Bike ID: "+$("#bikeid").val()+"<br>"
           +"Current Location: "+$("#postcode").val();
           //$("#TrackCollapseBody").html(html);      
           
-          console.log("Flag")
           // get all the bikes possibles
           $.ajax({
             type: "GET",
@@ -630,7 +583,9 @@
             data: {},
             success: function(response){
               var data = response.data;
-              console.log(data)
+              //console.log(data)
+
+              clearInterval(moveInterval);
 
               for (let j = 0; j < markersList.length; j++) {
                 markersList[j].setMap(null);
@@ -648,6 +603,13 @@
               if( markerCluster ) {
                 markerCluster.clearMarkers();
               }
+
+              
+              for (let p = 0; p < markerBikeListMoving.length; p++) {
+                markerBikeListMoving[p].setMap(null);
+              }
+              markerBikeListMoving = []
+              markerBikeListMovingNames = []
 
               var center = new google.maps.LatLng(55.860789,  -4.250311);
 
@@ -673,7 +635,7 @@
               var listBikesOps = []
               
 
-              calcRoute();
+              //calcRoute();
 
               for (let m = 0; m < data.length; m++) {
                 let currentB = data[m]
@@ -707,12 +669,25 @@
                 })
                 // First get the current rented bikes
                 if (currentB.is_available == 0 && currentB.is_defective == 0) {
-                  markerBikeListMoving.push(marker)
+                  const markerMov = new google.maps.Marker({
+                    position: myLatLong,
+                    map: map,
+                    title: "bike_: "+(currentB.bike_id),
+                    icon: image,
+                    label: {
+                      text: "No. "+currentB.bike_id,
+                      color: "#ffffff",
+                      fontSize: "20px",
+                      fontWeight: "bold"
+                    },
+                  })
+                  markerBikeListMoving.push(markerMov)
+                  markerBikeListMovingNames.push(currentB)
                 }
                 // Second get the available bikes to be clustered
                 else if(currentB.is_available == 1 ) {
-                  console.log(randomness_degrees)
-                  console.log(bikeLocation.postcode)
+                  //console.log(randomness_degrees)
+                  ///console.log(bikeLocation.postcode)
                   markerBikeList.push(marker)
                 }
                 // Finally get the list of bike with some extra property (repairing or moving)
@@ -732,7 +707,6 @@
               let innerTextOps = ""
               for(var u = 0; u <listBikesOps.length; u++){
                 var cBk = listBikesOps[u]
-                console.log(cBk)
                 if(cBk.is_available == 2) { // move
                   innerTextOps += "<p><b>Bike No. "+cBk.bike_id+":</b> It's being moved</p>"
                 }
@@ -746,9 +720,56 @@
               if (listBikesOps.length == 0) {
                 innerTextOps = "<b> There is no bike under any activity by operators</b>"
               }
+              //innerTextOps +="<br>"
+              innerTextOps +="<b>Bikes currently rented: </b>"
+              for(var m = 0; m < markerBikeListMovingNames.length; m++) {
+                var cUBk = markerBikeListMovingNames[m]
+                innerTextOps += "<p>Bike No. "+cUBk.bike_id+"</p>"
+              }
+
               $("#TrackCollapseBody").html(innerTextOps);
+
+              // move bikes
+              let counterInterval = 0
+              moveInterval = setInterval(function() {
+                for(var u = 0; u < markerBikeListMoving.length; u ++) {
+                  var currRoute = routes_map['route'+((u%5)+1)]
+                  if (counterInterval < currRoute.length) {
+                    var currCorr = currRoute[counterInterval]
+                    markerBikeListMoving[u].setPosition( new google.maps.LatLng( currCorr.lat, currCorr.lng ) );
+                  }
+                }
+                counterInterval++
+              }, 500); 
             }
           });
+      }
+      function EndTrack() {
+          clearInterval(moveInterval);
+
+          for (let j = 0; j < markersList.length; j++) {
+            markersList[j].setMap(null);
+          }
+          markersList = []
+
+          for (let k = 0; k < markerBallonList.length; k++) {
+            markerBallonList[k].setMap(null);
+          }
+          markerBallonList = []
+          for (let l = 0; l < markerBikeList.length; l++) {
+            markerBikeList[l].setMap(null);
+          }
+          markerBikeList = []
+          if( markerCluster ) {
+            markerCluster.clearMarkers();
+          }
+          for (let p = 0; p < markerBikeListMoving.length; p++) {
+            markerBikeListMoving[p].setMap(null);
+          }
+          markerBikeListMoving = []
+          markerBikeListMovingNames = []
+          showInitMap();
+          getPendingOps();
       }
       function GetRepair(){
           var html="Current Bike ID: "+$("#bikeid").val()+"<br>"
@@ -933,6 +954,14 @@
                       onClick="GetTrack()"
                   >
                       Refresh Tracking 
+                  </button> 
+
+                  <button
+                      class="submitbox btn btn-success"
+                      data-toggle="collapse" data-target="#TrackCollapse"
+                      onClick="EndTrack()"
+                  >
+                      End Tracking 
                   </button> 
                 </div>
                 </div>                
