--- a/bikeshare/templates/bikeshareapp/manager_page.html
+++ b/bikeshare/templates/bikeshareapp/manager_page.html
@@ -16,16 +16,26 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
+    <script src="{% static "javascript/routes.js" %}"></script>
 
-     <style type="text/css">
+    <script
+      src="{% static "javascript/jquery-3.5.1.min.js"%}"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <style type="text/css">
       #map {
         height: 57%;
       }
@@ -38,10 +48,309 @@
       }
     </style>
 
-    <script>
-    let map;
-    let imgs = "{% static "img/" %}"
+    <!-- CANNOT FIND THIS SCRIPT
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />-->
 
+    <script>
+      let map;
+      let imgs = "{% static "img/" %}"
+      let markersList = []
+      let markerBallonList = []
+      let markerBikeList = []
+      let markerBikeListMoving = []
+      let markerBikeListMovingNames = []
+      let moveInterval;
+      let markerCluster;
+      function initMap() {
+          map = new google.maps.Map(document.getElementById("map"), {
+              center: { lat: 55.860789, lng: -4.250311 },
+              zoom: 12,
+              mapTypeId: "terrain",
+          });
+          // Create a <script> tag and set the USGS URL as the source.
+          const script = document.createElement("script");
+          script.src =
+          "https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js";
+          document.getElementsByTagName("head")[0].appendChild(script);
+          showInitMap();
+      }
+
+      function showInitMap (results) {
+        // Ser date max on end date picker
+        var maxDate = new Date()
+        var maxDateIso = maxDate.toISOString()
+        var maxDateValue = maxDateIso.split("T")[0]
+        $("#end-date-report").val(maxDateValue)
+
+        $.ajax({
+          type: "GET",
+          dataType: "json",
+          url: "/locations-of-availabe-bikes/",
+          data: {},
+          success: function (response) {
+              //console.log(response)
+              //alert(response.location);
+              var arrayData = response.location;
+
+              for (let j = 0; j < markerBallonList.length; j++) {
+                markerBallonList[j].setMap(null);
+              }
+              markerBallonList = []
+
+              for (let i = 0; i < arrayData.length; i++) {
+                  var currentData = arrayData[i];
+                  var longitudeData = arrayData[i].longitude;
+                  var latitudeData = arrayData[i].latitude;
+
+                  const latLng = new google.maps.LatLng(latitudeData, longitudeData);
+                  const marker = new google.maps.Marker({
+                      position: latLng,
+                      map: map,
+                      title: "location_id_: "+(currentData.location_id),
+                  })
+
+                  const contentPopup = 
+                  '<div id="content">' +
+                  '<div id="siteNotice">' +
+                  "</div>" +
+                  '<h3 id="firstHeading" class="firstHeading">'+currentData.line_1+'</h3>' +
+                  '<div id="bodyContent">' +
+                  "<p><b>Postcode:</b> "+currentData.postcode+"</p>" +
+                  "<p><b>City:</b> "+currentData.city+"</p>" +
+                  "</div>" +
+                  "</div>";
+
+                  const infoPopup = new google.maps.InfoWindow({
+                    content: contentPopup,
+                  });
+
+                  marker.addListener("click", () => {
+                    infoPopup.open(map, marker);
+                  });
+
+                  markerBallonList.push(marker)
+              }
+          },
+        });
+      }
+
+      function GetTrack(){
+          var html="Current Bike ID: "+$("#bikeid").val()+"<br>"
+          +"Current Location: "+$("#postcode").val();
+          //$("#TrackCollapseBody").html(html);      
+          
+          // get all the bikes possibles
+          $.ajax({
+            type: "GET",
+            dataType: "json",
+            url: "/track-bikes/",
+            data: {},
+            success: function(response){
+              var data = response.data;
+              //console.log(data)
+
+              clearInterval(moveInterval);
+
+              for (let j = 0; j < markersList.length; j++) {
+                markersList[j].setMap(null);
+              }
+              markersList = []
+
+              for (let k = 0; k < markerBallonList.length; k++) {
+                markerBallonList[k].setMap(null);
+              }
+              markerBallonList = []
+              for (let l = 0; l < markerBikeList.length; l++) {
+                markerBikeList[l].setMap(null);
+              }
+              markerBikeList = []
+              if( markerCluster ) {
+                markerCluster.clearMarkers();
+              }
+
+              
+              for (let p = 0; p < markerBikeListMoving.length; p++) {
+                markerBikeListMoving[p].setMap(null);
+              }
+              markerBikeListMoving = []
+              markerBikeListMovingNames = []
+
+              var center = new google.maps.LatLng(55.860789,  -4.250311);
+
+              window.setTimeout(() => {
+                map.panTo(center);
+                map.setZoom(12);
+                map.setCenter(center);
+              }, 30);
+
+              const image = {
+                url: imgs + '/bike.png',
+                origin: new google.maps.Point(0, 0),
+                scaledSize: new google.maps.Size(60, 60),
+              };
+
+              // To show bike icon on maps
+              var pi = Math.PI
+              var degrees = 180;
+              var radious = 0.001; //0.0001 - 
+              var randomess_l1 = 100
+              var randomess_l2 = 200
+
+              var listBikesOps = []
+              
+
+              //calcRoute();
+
+              for (let m = 0; m < data.length; m++) {
+                let currentB = data[m]
+                let bikeLocation = currentB.location
+
+                var longitudeData = bikeLocation.longitude;
+                var latitudeData = bikeLocation.latitude;
+
+                // Random position
+                // From: https://gis.stackexchange.com/questions/37615/how-to-place-markers-on-the-outline-of-a-circle-in-google-maps
+                // Accesed on: Feb, 11 2021
+                var randomness_degrees = Math.floor(Math.random() * (randomess_l2 - randomess_l1) + randomess_l1);
+                
+                var longitudeBike = Math.cos(randomness_degrees * pi / 180 ) * radious + longitudeData;
+                var latitudeBike = Math.sin(randomness_degrees * pi / 180 ) * radious + latitudeData;
+
+
+                var myLatLong = new google.maps.LatLng(latitudeBike, longitudeBike);
+
+                const marker = new google.maps.Marker({
+                  position: myLatLong,
+                  //map: map,
+                  title: "bike_: "+(currentB.bike_id),
+                  icon: image,
+                  label: {
+                    text: "No. "+currentB.bike_id,
+                    color: "#ffffff",
+                    fontSize: "20px",
+                    fontWeight: "bold"
+                  },
+                })
+                // First get the current rented bikes
+                if (currentB.is_available == 0 && currentB.is_defective == 0) {
+                  const markerMov = new google.maps.Marker({
+                    position: myLatLong,
+                    map: map,
+                    title: "bike_: "+(currentB.bike_id),
+                    icon: image,
+                    label: {
+                      text: "No. "+currentB.bike_id,
+                      color: "#ffffff",
+                      fontSize: "20px",
+                      fontWeight: "bold"
+                    },
+                  })
+                  markerBikeListMoving.push(markerMov)
+                  markerBikeListMovingNames.push(currentB)
+                }
+                // Second get the available bikes to be clustered
+                else if(currentB.is_available == 1 ) {
+                  //console.log(randomness_degrees)
+                  ///console.log(bikeLocation.postcode)
+                  markerBikeList.push(marker)
+                }
+                // Finally get the list of bike with some extra property (repairing or moving)
+                else {
+                  listBikesOps.push(currentB)
+                }
+              }
+
+              // Marker cluster
+              markerCluster = new MarkerClusterer(map, markerBikeList, {
+                maxZoom: 15,
+                imagePath:
+                  "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m",
+              });
+
+              // generate text to tell status of bikes under operations
+              let innerTextOps = ""
+              for(var u = 0; u <listBikesOps.length; u++){
+                var cBk = listBikesOps[u]
+                if(cBk.is_available == 2) { // move
+                  innerTextOps += "<p><b>Bike No. "+cBk.bike_id+":</b> It's being moved</p>"
+                }
+                else if(cBk.is_available == 3) { // repairing
+                  innerTextOps += "<p><b>Bike No. "+cBk.bike_id+":</b> It's under repairment</p>"
+                }
+                else {
+                  innerTextOps += "<p><b>Bike No. "+cBk.bike_id+":</b> No idea. Contact admin</p>"
+                }
+              }
+              if (listBikesOps.length == 0) {
+                innerTextOps = "<b> There is no bike under any activity by operators</b>"
+              }
+              //innerTextOps +="<br>"
+              innerTextOps +="<b>Bikes currently rented: </b>"
+              for(var m = 0; m < markerBikeListMovingNames.length; m++) {
+                var cUBk = markerBikeListMovingNames[m]
+                innerTextOps += "<p>Bike No. "+cUBk.bike_id+"</p>"
+              }
+
+              $("#TrackCollapseBody").html(innerTextOps);
+
+              // move bikes
+              let counterInterval = 0
+              moveInterval = setInterval(function() {
+                for(var u = 0; u < markerBikeListMoving.length; u ++) {
+                  var currRoute = routes_map['route'+((u%5)+1)]
+                  if (counterInterval < currRoute.length) {
+                    var currCorr = currRoute[counterInterval]
+                    markerBikeListMoving[u].setPosition( new google.maps.LatLng( currCorr.lat, currCorr.lng ) );
+                  }
+                }
+                counterInterval++
+              }, 500); 
+            }
+          });
+      }
+      function EndTrack() {
+          clearInterval(moveInterval);
+
+          for (let j = 0; j < markersList.length; j++) {
+            markersList[j].setMap(null);
+          }
+          markersList = []
+
+          for (let k = 0; k < markerBallonList.length; k++) {
+            markerBallonList[k].setMap(null);
+          }
+          markerBallonList = []
+          for (let l = 0; l < markerBikeList.length; l++) {
+            markerBikeList[l].setMap(null);
+          }
+          markerBikeList = []
+          if( markerCluster ) {
+            markerCluster.clearMarkers();
+          }
+          for (let p = 0; p < markerBikeListMoving.length; p++) {
+            markerBikeListMoving[p].setMap(null);
+          }
+          markerBikeListMoving = []
+          markerBikeListMovingNames = []
+          showInitMap();
+      }
+
+      function generateReport() {
+        var d1 = $("#start-date-report").val()
+        var d1Array = d1.split('-')
+        var dateStart = new Date(d1Array[0], d1Array[1]-1, d1Array[2])
+        var d2 = $("#end-date-report").val()
+        var d2Array = d2.split('-')
+        var dateEnd = new Date(d2Array[0], d2Array[1]-1, d2Array[2])
+        console.log(dateStart)
+        console.log(dateEnd)
+
+      }
+ 
     </script>
 
     <title>Bike Sharing</title>
@@ -78,8 +387,117 @@
     <div id="map"></div>
 
     <section id="main-page">
-        MANAGER
+      <div class="container">
+
+        <!--Track bikes-->
+        <div class="start-form bg-light p-3">
+          <h2 class="m-heading">Welcome, Manager.</h2>
+          <br>
+          <!--- Track Button -->
+          <div id="accord"> 
+            <button
+              class="btn btn-primary"
+              data-toggle="collapse" data-target="#TrackCollapse"
+              data-parent="#accord" aria-controls="TrackCollapse"
+              onClick="GetTrack()">
+                Track All Bikes
+            </button>  
+            
+            <!--- Track Collapse --->
+            <div class="collapse" id="TrackCollapse" data-parent="#accord">
+                <div class="card card-body"
+                  id="TrackCollapseBody">
+                </div>
+                <div class="card-footer">
+                <div class="form-group">
+                  <button
+                      class="submitbox btn btn-success"
+                      onClick="GetTrack()"
+                  >
+                      Refresh Tracking 
+                  </button> 
+
+                  <button
+                      class="submitbox btn btn-success"
+                      data-toggle="collapse" data-target="#TrackCollapse"
+                      onClick="EndTrack()"
+                  >
+                      End Tracking 
+                  </button> 
+                </div>
+                </div>                
+            </div> 
+          </div>
+          <!--Track bikes-->
+          <br>
+
+          <div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-12">
+                  <div class="row">
+                    <label>Generate report using the following dates </label>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm">
+                      <label for="start-date-report">Start Date: </label>
+                      <input
+                        class="form-control"
+                        placeholder="Expirency Date"
+                        type="date"
+                        id="start-date-report"
+                        class="box"
+                        value="2021-01-01"
+                        min="2021-02-01"
+                        required
+                      />
+                    </div>
+                    <div class="col-sm">
+                      <label for="end-date-report">End Date: </label>
+                      <input
+                        class="form-control"
+                        placeholder="Expirency Date"
+                        type="date"
+                        id="end-date-report"
+                        class="box"
+                        min="2021-02-01"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12" id="accord-graphs">
+                      <br>
+                      <button
+                        class="submitbox btn btn-primary"
+                        data-toggle="collapse" data-target="#graph-collapse"
+                        data-parent="#accord-graphs" aria-controls="graph-collapse"
+                        onclick="generateReport()"
+                      >
+                        Generate Report
+                      </button>
+
+                      <div class="collapse" id="graph-collapse" data-parent="#accord-graphs">
+                          <div class="card card-body"
+                            id="graph-collapse-body">
+                            Body... Graphs goes here
+                          </div>
+                          <div class="card-footer">
+                          <div class="form-group">
+                            Footer
+                          </div>
+                          </div>                
+                      </div> 
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
     <style type="text/css">
 		#time p{
 			color: #000000;
@@ -91,7 +509,6 @@
 		}
 	</style>
 
-    
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
