Manager report. Fixed get token from cookie. Download pdf for manager. Download csv for manager.... I think it's done

--- a/bikeshare/templates/bikeshareapp/operator_page.html
+++ b/bikeshare/templates/bikeshareapp/operator_page.html
@@ -898,7 +898,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
       <div class="container">
-        <a href="user_page.html" class="navbar-brand">
+        <a href="/home" class="navbar-brand">
           <i class="fas fa-biking"></i>
           <span class="text-primary font-weight-bold">Bike</span>
           Sharing</a
@@ -913,7 +913,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="/home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="/logout" class="nav-link">Log out</a>
