--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -16,6 +16,15 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+
+    <script
+      src="{% static "javascript/jquery-3.5.1.min.js"%}"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <title>Rent A Bike</title>
@@ -47,11 +56,6 @@
         }
     </style>
 
-    <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
     <script>
       var timer = null
       var bike = null
@@ -84,7 +88,7 @@
           // call the endpoint to return the bike
           var currentLocation = $("#postcode-return").val()
           currentLocation = currentLocation.replace(' ','')
-          var xcsrft = "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
+          var xcsrft = $.cookie("csrftoken") //"bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
           if(currentLocation.length == 0){
             // TODO: Change to boostrap alert
             alert("Write the postcode please");
@@ -119,7 +123,7 @@
       function makePayment() {
         // should check the user profile before make the payment
         var currentCost = -1 * window.currentCost
-        var xcsrft = "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
+        var xcsrft = $.cookie("csrftoken")// "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
         $.ajax({
           type: "POST",
           dataType: "json",
@@ -164,7 +168,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
       <div class="container">
-        <a href="user_page.html" class="navbar-brand">
+        <a href="/home" class="navbar-brand">
           <i class="fas fa-biking"></i>
           <span class="text-primary font-weight-bold">Bike</span>
           Sharing</a
