--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -17,10 +17,12 @@
       crossorigin="anonymous"
     />
     <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      src="{% static "javascript/jquery-3.5.1.min.js"%}"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
@@ -40,6 +42,7 @@
 
     <script>
     let map;
+    var trip;
     let imgs = "{% static "img/" %}"
     let markersList = []
     function initMap() {
@@ -55,11 +58,18 @@
         document.getElementsByTagName("head")[0].appendChild(script);
         showInitMap();
         $('#ride-bike').hide();
+        $('#current-trip').hide()
 
         // check if the user has enough credit to have a ride
         var user_credit = "{{wallet}}"
+        trip = "{{trip}}"
         if(user_credit <= 0) {
           $('#ride-form-main').hide()
+        }
+        console.log(trip)
+        if(trip != None) {
+          $('#ride-form-main').hide()
+          $('#current-trip').show()
         }
     }
 
@@ -106,6 +116,10 @@
             }
         },
       });
+     }
+
+     function goToTrip() {
+      location.href="/start_rent_bike/"+ trip + "/";
      }
 
      function showMap(results) {
@@ -232,6 +246,9 @@
 
             // Html stuff p2
             var neededOnGrid = 3 - (bikes.length % 3);
+            if((bikes.length % 3) == 0) {
+              neededOnGrid = 0
+            }
             for(let x = 0; x < neededOnGrid; x++) {
               stringHtml+='<div class="col"></div>';
             }
@@ -246,7 +263,7 @@
      function addMoneyWallet() {
        // TODO: Check if fields look correct :P
        var amount = $("#am").val()
-       var xcsrft = "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
+       var xcsrft =  $.cookie("csrftoken") //"bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
        
         $.ajax({
           type: "POST",
@@ -280,7 +297,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
       <div class="container">
-        <a href="user_page.html" class="navbar-brand">
+        <a href="/home" class="navbar-brand">
           <i class="fas fa-biking"></i>
           <span class="text-primary font-weight-bold">Bike</span>
           Sharing</a
@@ -295,7 +312,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="/home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="/logout" class="nav-link">Log out</a>
@@ -389,6 +406,23 @@
           </div>
         </div>
 
+        <div class="start-form bg-light p-3" id="current-trip">
+          <h2 class="m-heading">You are currently on a trip!</h2>
+          <div>
+            <div class="form-group">
+              Click the button below to go to your trip
+            </div>
+            <div class="form-group">
+              <button
+                class="submitbox btn btn-primary"
+                onclick="goToTrip()"
+              >
+                Go To My Trip
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div class="start-form bg-light p-3">
           <h2 class="m-heading">Add money to your wallet!</h2>
           <div>
@@ -446,7 +480,7 @@
                 class="submitbox btn btn-primary"
                 onclick="addMoneyWallet()"
               >
-                Give us Money!
+                Add Money
               </button>
             </div>
           </div>
