Fixed logical bugs from Peihai's review

--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -115,6 +115,11 @@
                 $('#payment').modal('show'); 
                 $("#payment-info-modal").text("Your total cost is: "+costDisplay)
                 window.currentCost = data.cost;
+              },
+              error: function(response, textStatus, errorThrown ) {
+                if (response.status == 404) {
+                  alert("This is not a valid postcode/address. Please enter a correct one")
+                }
               }
             });
           }
