--- a/bikeshare/templates/bikeshareapp/index.html
+++ b/bikeshare/templates/bikeshareapp/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +8,25 @@
       href="https://cdn.bootcdn.net/ajax/libs/skeleton/2.0.4/skeleton.css"
       rel="stylesheet"
     />
+
+    <script
+      src="{% static "javascript/jquery-3.5.1.min.js"%}"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      let status = "{{status}}"
+      if (status == "COMPLETE") {
+        alert("Register completed!")
+        $(location).attr('href','/login');
+      }
+      else if (status == "EXISTED") {
+        alert("This email is in used. Try another please")
+      }
+      else if (status == "INCOMPLETE") {
+        alert("Please fill all the fields")
+      }
+    </script>
 
     <style>
       .text-center {
@@ -19,7 +39,7 @@
     <div class="container">
       <h1>Let's Start</h1>
 
-      <form id="user-form" action="/login/" method="post">
+      <form id="user-form" action="/register/" method="post">
           {% csrf_token %}
         <div>
           <label for="username">User Name</label>
