--- a/bikeshare/templates/bikeshareapp/register_other.html
+++ b/bikeshare/templates/bikeshareapp/register_other.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +9,31 @@
       rel="stylesheet"
     />
 
+    <script
+      src="{% static "javascript/jquery-3.5.1.min.js"%}"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      let status = "{{status}}"
+      if (status == "COMPLETE") {
+        alert("Register completed!")
+        $(location).attr('href','/login');
+      }
+      else if (status == "EXISTED") {
+        alert("This email is in used. Try another please")
+      }
+      else if (status == "INCOMPLETE") {
+        alert("Please fill all the fields")
+      }
+    </script>
+
+    <style>
+      .text-center {
+        text-align: center;
+      }
+    </style>
+
 
     <title>Sharing Bike</title>
   </head>
@@ -15,15 +41,18 @@
     <div class="container">
       <h1>Register</h1>
 
-      <form id="user-form" action="/login/">
+        <form id="user-form" action="/create-a-administrative-role-963852741/" method="post">
+          {% csrf_token %}
         <div>
           <label for="username">User Name</label>
-          <input type="text" id="username" class="u-full-width" />
+          <input type="text" id="username" name="nickname" class="u-full-width" required />
         </div>
+
         <div>
-          <label for="pwd">PassWord</label>
-          <input type="password" id="pwd" class="u-full-width" />
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" class="u-full-width" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required  />
         </div>
+
         <div>
           <label for="role">Role</label>
           <select name="role" id="role">
@@ -33,10 +62,16 @@
         </div>
 
         <div>
+          <label for="password">Set PassWord</label>
+          <input type="password" id="pwd" name="password" class="u-full-width" required/>
+        </div>
+
+        <div>
           <input type="submit" value="Register" class="u-full-width" />
         </div>
       </form>
-
+    
+    <p class="text-center"> Already in the system? Please <a href="/login/">click here</a>  to log in!</p>
     {% load static %}
     <script src="{% static "javascript/app.js" %}"></script>
   </body>
