Fixed operator issues based on Peihai's review

--- a/bikeshare/templates/bikeshareapp/operator_page.html
+++ b/bikeshare/templates/bikeshareapp/operator_page.html
@@ -823,6 +823,7 @@
             var data = response.data;
             alert("The repairment has ended. The bike will be returned to the last location where it was");
             getPendingOps();
+            getBikesOperator();
           }
         });
       }
