login vertically center

--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -9,9 +9,20 @@
     />
 
     <style>
+        html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
       .text-center {
         text-align: center;
       }
+      .container {
+          position: center;
+          margin-top: 150px;
+      }
+
     </style>
     <title>Sharing Bike</title>
   </head>
