--- a/bikeshare/templates/bikeshareapp/login.html
+++ b/bikeshare/templates/bikeshareapp/login.html
@@ -22,6 +22,9 @@
           position: center;
           margin-top: 150px;
       }
+      h1 {
+          text-align: center;
+      }
 
     </style>
     <title>Sharing Bike</title>
