--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -1,290 +1,194 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script
-      src="{% static "javascript/jquery-3.5.1.min.js"%}"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+  <!-- Load styles from boostrap and fontawesome libraries and local styles-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" crossorigin="anonymous" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <title>Rent A Bike</title>
-    <style>
-        html, body {
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
+  <style>
+    /*
+    Local style to display the counter
+    */
+    html,
+    body {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
 
-        span {
-            font-weight:bold;
-        }
-        .card {
-            padding-top: 80px;
-            height: 80%;
-        }
-        .card-body {
-            padding-top: 70px;
-        }
-        .card-bodyquote {
-            padding-top: 70px;
-        }
-        .new-color {
-            background-color: #eee;
-        }
-        .modal-header {
-            padding: 10px;
-        }
-    </style>
+    span {
+      font-weight: bold;
+    }
 
-    <script>
-      var timer = null
-      var bike = null
-      var ended = -1
-      $(function() {
-        var current = "{{current_time}}";
-        bike = "{{current_bike}}"
-        ended = "{{ended}}"
-        if (ended == 1) {
-          $("#ended_text").text("THIS TRIP ENDED.... HAVE A GOOD DAY")
-          $("#form-location-end").hide()
-        }
-        else {
-          var count = current; 
-          timer = null;
-          clearInterval(timer);
-          timer = setInterval(function(){
-              count++;
-              // change time in the page
-              $("#id_S").text(showNum(count % 60));
-              $("#id_M").text(showNum(parseInt(count / 60) % 60));
-              $("#id_H").text(showNum(parseInt(count / 3600 )));
-          },1000);
-        }
-        
-      });
+    .card {
+      padding-top: 80px;
+      height: 80%;
+    }
 
-      function returnBike(){
-          var trip_id = "{{trip_id}}"
-          // call the endpoint to return the bike
-          var currentLocation = $("#postcode-return").val()
-          currentLocation = currentLocation.replace(' ','')
-          var xcsrft = $.cookie("csrftoken") //"bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
-          if(currentLocation.length == 0){
-            // TODO: Change to boostrap alert
-            alert("Write the postcode please");
-          }
-          else {
-            // quit timer
-            clearInterval(timer);
-            console.log(currentLocation)
-            $.ajax({
-              type: "POST",
-              dataType: "json",
-              url: "/return_bike/",
-              data: {
-                bike_id: bike,
-                location: currentLocation,
-                trip_id: trip_id
-              },
-              beforeSend: function (request) {
-                request.setRequestHeader("X-CSRFToken", xcsrft);
-              },
-              success: function(response){
-                var data = response.data;
-                var costDisplay = Math.round(data.cost * 100) / 100
-                $('#payment').modal('show'); 
-                $("#payment-info-modal").text("Your total cost is: "+costDisplay)
-                window.currentCost = data.cost;
-              },
-              error: function(response, textStatus, errorThrown ) {
-                if (response.status == 404) {
-                  alert("This is not a valid postcode/address. Please enter a correct one")
-                }
-              }
-            });
-          }
-      }
+    .card-body {
+      padding-top: 70px;
+      padding-bottom: 70px;
+    }
 
-      function makePayment() {
-        // should check the user profile before make the payment
-        var currentCost = -1 * window.currentCost
-        var xcsrft = $.cookie("csrftoken")// "bV2JXP0TnIbUX5Mmq0iF4lUfC34ctY5uZwOKGnaeLwFV8I8lP7OPYLBrLTFcHLKT"; // should get this from cookes
-        $.ajax({
-          type: "POST",
-          dataType: "json",
-          url: "/recalculate-wallet/",
-          data: {
-            amount: currentCost
-          },
-          beforeSend: function (request) {
-            request.setRequestHeader("X-CSRFToken", xcsrft);
-          },
-          success: function(response){
-            var data = response.data;
-            var credit = data.credit
-            if (credit < 0) {
-              alert("You have a debt of "+(-1*credit)+". You will need to add enough money to your wallet before riding again")
-            }
-            else {
-              alert("You have payed your ride. Your current credit is "+credit)
-            }
-            location.href = "/home"
+    .card-bodyquote {
+      padding-top: 70px;
+    }
 
-          }
-        });
-      }
+    .new-color {
+      background-color: #eee;
+    }
 
-     
+    .modal-header {
+      padding: 10px;
+    }
+  </style>
 
-
-      // single number
-      function showNum(num){
-          if(num<10){
-              return "0" + num;
-          }else{
-              return num;
-          }
-      }
-      
-    </script>
-
+  <title>Rent A Bike</title>
 </head>
+
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
-      <div class="container">
-        <a href="/home" class="navbar-brand">
-          <i class="fas fa-biking"></i>
-          <span class="text-primary font-weight-bold">Bike</span>
-          Sharing</a
-        >
-        <button
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="/home" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="/logout" class="nav-link">Log out</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="card text-center">
-      <div class="card-body">
-        <div class="card bg-dark text-white p-3">
-          <blockquote class="card-bodyquote">
-            <span class="display-4" id="id_H">00</span
-            ><span class="display-4">:</span>
-            <span class="display-4" id="id_M">00</span
-            ><span class="display-4">:</span>
-            <span class="display-4" id="id_S">00</span>
-            <br />
-            <span class="display-3" id="ended_text"></span>
-            <footer class="blockquote-footer">
-              <small>
-                <cite>Enjoy your trip and explore your city</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <br />
-        <br />
-        <!-- TODO: IMPROVE STYLE PLEASE-->
-        <div style="display: inline-grid;" id="form-location-end">
-          <div class="form-group">
-            <label for="postcode">Where are you leaving the bike? </label>
-            <input
-              class="form-control"
-              placeholder="Enter postcode"
-              type="text"
-              id="postcode-return"
-              class="box"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <input
-              class="btn btn-dark "
-              id="pause"
-              type="button"
-              value="Return Bike"
-              onclick="returnBike()"
-            />
-          </div>
-        </div>
-      </div>
-      <br><br><br>
-      <div class="card-footer text-muted">
-        Enjoy your trip and explore your city
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
+    <div class="container">
+      <a href="/home" class="navbar-brand">
+        <i class="fas fa-biking"></i>
+        <span class="text-primary font-weight-bold">Bike</span>
+        Sharing</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="/home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="/logout" class="nav-link">Log out</a>
+          </li>
+        </ul>
       </div>
     </div>
-
-    <div class="modal fade" id="payment">
-      <div class="modal-lg modal-dialog ">
-        <div class="modal-content">
-          <div class="text-black-50 new-color modal-header">
-            <h5 class="modal-title">Make a payment</h5>
-            <button class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p class="h4 text-center" id="payment-info-modal">Your total cost is: </p>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-dark" data-dismiss="modal" onclick="makePayment()">Check out</button>
-          </div>
+  </nav>
+  <div class="card text-center">
+    <!-- Show the counter -->
+    <div class="card-body">
+      <div class="card bg-dark text-white p-3">
+        <blockquote class="card-bodyquote">
+          <!-- Each spam is a number part of the time (hour, minute, second) -->
+          <span class="display-4" id="id_H">00</span><span class="display-4">:</span>
+          <span class="display-4" id="id_M">00</span><span class="display-4">:</span>
+          <span class="display-4" id="id_S">00</span>
+          <br />
+          <span class="display-3" id="ended_text"></span>
+          <!-- Footer message -->
+          <footer class="blockquote-footer">
+            <small>
+              <cite>Enjoy your trip and explore your city</cite>
+            </small>
+          </footer>
+        </blockquote>
+      </div>
+      <br />
+      <br />
+      <!-- Input for postcode to leave the bike -->
+      <div style="display: inline-grid;" id="form-location-end">
+        <div class="form-group">
+          <label for="postcode">Where are you leaving the bike? </label>
+          <input class="form-control" placeholder="Enter postcode" type="text" id="postcode-return" class="box"
+            required />
+        </div>
+        <!-- Call method to retunr the bike -->
+        <div class="form-group">
+          <input class="btn btn-dark " id="pause" type="button" value="Return Bike" onclick="returnBike()" />
         </div>
       </div>
     </div>
+    <br><br><br>
+    <!-- Display message -->
+    <div class="card-footer text-muted">
+      Enjoy your trip and explore your city
+    </div>
+  </div>
 
-    
+  <!-- Modal to make the payment when returning the bike -->
+  <div class="modal fade" id="payment">
+    <div class="modal-lg modal-dialog ">
+      <div class="modal-content">
+        <div class="text-black-50 new-color modal-header">
+          <h5 class="modal-title">Make a payment</h5>
+          <button class="close" data-dismiss="modal">
+            <span>&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="h4 text-center" id="payment-info-modal">Your total cost is: </p>
+        </div>
+        <!-- Button to call the makePayment method -->
+        <div class="modal-footer">
+          <button class="btn btn-dark" data-dismiss="modal" onclick="makePayment()">Check out</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-      crossorigin="anonymous"
-    ></script>
 
-    <script
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhwTKf3kSrByV-QeOT5hWAXN7CtM2VHFE&callback=initMap"
-    ></script>
+  <!-- Load jquery script -->
+  <script src="{% static "javascript/jquery-3.5.1.min.js"%}" crossorigin="anonymous"></script>
+  <!-- Load jquery cookie - This is used to manage the cookies on the app -->
+  <script type="text/javascript" src="{% static "javascript/jquery.cookie.min.js"%}"></script>
 
-    <script src="{% static "javascript/app.js" %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    crossorigin="anonymous"></script>
+
+  <!-- This script cannot be moved from html given the dependecy of events (start) -->
+  <script>
+    // Global variables to manage the counter of the current trip
+    var timer = null
+    var bike = null
+    var ended = -1
+    var trip_id = "{{trip_id}}"
+
+    // This function is to be called when the rendering of the html is complete
+    $(function () {
+
+      // Get the variables from the response from Django
+      var current = "{{current_time}}";
+      bike = "{{current_bike}}"
+      ended = "{{ended}}"
+      // If user is viewing an ended trip
+      if (ended == 1) {
+        $("#ended_text").text("THIS TRIP ENDED.... HAVE A GOOD DAY")
+        $("#form-location-end").hide()
+      }
+      else {
+        // If the user is viewing an ongoing trip show the time
+        var count = current;
+        timer = null;
+
+        // Use an interval to count hours, minutes and seconds
+        clearInterval(timer);
+        timer = setInterval(function () {
+          count++;
+          // change time in the page
+          $("#id_S").text(showNum(count % 60));
+          $("#id_M").text(showNum(parseInt(count / 60) % 60));
+          $("#id_H").text(showNum(parseInt(count / 3600)));
+        }, 1000);
+      }
+
+    });
+  </script>
+
+  <script src="{% static "javascript/app-rent.js" %}"></script>
 
 </body>
+
 </html>
