--- a/bikeshare/templates/bikeshareapp/register_other.html
+++ b/bikeshare/templates/bikeshareapp/register_other.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Load library -->
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
   <link href="https://cdn.bootcdn.net/ajax/libs/skeleton/2.0.4/skeleton.css" rel="stylesheet" />
 
   <style>
@@ -17,16 +18,17 @@
     }
   </style>
 
-
   <title>Sharing Bike</title>
 </head>
 
 <body>
+  <div id="modal-area"></div>
   <!-- Container for the form -->
+  <div style="height: 150px;"></div>
   <div class="container">
     <h1>Register</h1>
 
-    <form id="user-form" action="/create-a-administrative-role-963852741/" method="post">
+    <form id="user-form" action="/create-a-administrative-role-86eb3212a32d5fde5d53c77d4f872fd2/" method="post">
       {% csrf_token %}
 
       <!-- Ask for username -->
@@ -70,7 +72,9 @@
 </body>
 
 <!-- Load jquery script -->
-<script src="{% static " javascript/jquery-3.5.1.min.js"%}" crossorigin="anonymous"></script>
+<script src="{% static "javascript/jquery-3.5.1.min.js"%}" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+<script src="{% static "javascript/alert-modal.js" %}"></script>
 
 <!-- Specif script for this view -->
 <script>
@@ -78,15 +82,19 @@
   let status = "{{status}}"
   // If the register was successful
   if (status == "COMPLETE") {
-    alert("Register completed!")
-    $(location).attr('href', '/login');
+    //alert("Register completed!")
+    callModalAlert("SUCCESS", "Register completed!", function(){
+      $(location).attr('href', '/login');
+    })
   }
   // If registration implies a user that already exists
   else if (status == "EXISTED") {
-    alert("This email is in used. Try another please")
+    //alert("This email is in used. Try another please")
+    callModalAlert("ERROR", "This email is in used. Try another please")
   }
   else if (status == "INCOMPLETE") {
-    alert("Please fill all the fields")
+    //alert("Please fill all the fields")
+    callModalAlert("ERROR", "Please fill all the fields")
   }
 </script>
 
