--- a/bikeshare/templates/bikeshareapp/rent_bike.html
+++ b/bikeshare/templates/bikeshareapp/rent_bike.html
@@ -136,7 +136,7 @@
       </div>
     </div>
   </div>
-
+  <div id="modal-area"></div>
 
   <!-- Load jquery script -->
   <script src="{% static "javascript/jquery-3.5.1.min.js"%}" crossorigin="anonymous"></script>
@@ -187,6 +187,7 @@
     });
   </script>
 
+  <script src="{% static "javascript/alert-modal.js" %}"></script>
   <script src="{% static "javascript/app-rent.js" %}"></script>
 
 </body>
