--- a/bikeshare/templates/bikeshareapp/user_page.html
+++ b/bikeshare/templates/bikeshareapp/user_page.html
@@ -78,7 +78,7 @@
       <!-- Message to guide the user to enter the postcode when money is available -->
       <div class="start-form bg-light p-3" id="ride-form-main">
         <h2 class="m-heading">Let's start!</h2>
-        <h3 class="m-heading text-danger" id="alertInitPostcode">Enter the postcode of your current location below</h3>
+        <h3 class="m-heading text-danger" id="alertInitPostcode">Find a Bike on our map then enter the postcode below to select bikes at that location</h3>
         <div>
           <!-- Form to ask for the postcode -->
           <div class="form-group">
@@ -169,7 +169,7 @@
             <input class="form-control" placeholder="Security Number" type="number" id="sn" class="box" min="100"
               max="999" required />
 
-            <label for="am">Amount of Money: </label>
+            <label for="am">Amount of Money £: </label>
             <input class="form-control" placeholder="Amount of Money" type="number" id="am" class="box" min="1"
               max="9999999999" required />
 
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-
+      <div id="modal-area"></div>
     </div>
   </section>
 
@@ -199,6 +199,7 @@
   </script>
 
   <!-- Add custom javascript -->
+  <script src="{% static "javascript/alert-modal.js" %}"></script>
   <script src="{% static "javascript/app-user.js" %}"></script>
 
   <!-- This script cannot be on a separate file because of the dependey on Google Maps and Django-->
